# RSOI-LAB3

./: docker-compose.yml
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
src/: service.json
src/apigateway/: Dockerfile  circuit_breaker.py  db_conn.py  exc_handler.py  handlers.py  main.py  repo.py  requirements.txt  schema.py  serializer.py  validator.py
src/bonus_service/: Dockerfile  init.sql  main.py  pyproject.toml  schema.py
src/flight_service/: Dockerfile  init.sql  main.py  pyproject.toml  schema.py
src/ticket_service/: Dockerfile  init.sql  main.py  pyproject.toml  schema.py
